# ignfetch

./: .flake8  .gitignore  .pre-commit-config.yaml  AGENTS.md  AGENTS_HISTORY.md  README.md  pyproject.toml
src/ignfetch/: __main__.py  const.py  main.py  utils.py
src/ignfetch/assets/: __init__.py  dalles_bdortho.parquet  year_of_capture_bdortho_irc.parquet  year_of_capture_bdortho_rvb.parquet
