[project]
name = "ignfetch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Gabriel Belouze", email = "gabriel@belouze.com" }]
requires-python = ">=3.12"
dependencies = [
    "cyclopts>=4.10.0",
    "geopandas>=1.1.3",
    "joblib>=1.5.3",
    "multivolumefile>=0.2.3",
    "numpy>=2.4.3",
    "py7zr>=1.1.0",
    "pyarrow>=23.0.1",
    "rasterio>=1.5.0",
    "requests>=2.32.5",
    "retry>=0.9.2",
    "rich>=14.3.3",
    "shapely>=2.1.2",
]

[project.scripts]
ignfetch = "ignfetch:main"

[build-system]
requires = ["uv_build>=0.8.13,<0.9.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py312"
line-length = 100
[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # pydocstyle and pydoclint
    # "D",
    "DOC",
    # flake8-use-pathlib
    "PTH",
    # flake8-logging
    "LOG",
    # flake8-no-pep420
    "INP",
    "PIE",
    "T20",
    # pytest
    "PT",
]
ignore = ["DOC501", "DOC201"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.extend-per-file-ignores]
"tests/*.py" = ["INP001"]
"docs/**/*.py" = ["INP001"]

[tool.pydoclint]
style = "numpy"
skip-checking-raises = true
check-style-mismatch = true
ignore = [
    "DOC201",
    "DOC202",
    "DOC402",
    "DOC403",
    "DOC501",
    "DOC501",
] # ignore what ruff implements

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = ["slow"]
log_cli = true
log_cli_level = "DEBUG"
log_level = "DEBUG"

[tool.ty.environment]
python-version = "3.12"

[tool.ty.src]
include = ["src", "tests"]
exclude = ['tests/test_download.py', 'tests/conftest.py']
